@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<language id="cpp" _name="C++" version="2.0" _section="Sources" mimetypes="text/x-c++;text/x-cpp;text/x-c-header;text/x-c++src;text/x-c++hdr">
+<language id="cpp" _name="C++" version="2.0" _section="Sources"
+          mimetypes="text/x-c++;text/x-cpp;text/x-c-header;text/x-c++src;text/x-c++hdr"
+          globs="*.cc;*.hh;*.cpp;*.hpp;*.cxx;*.hxx;*.C">
     <styles>
         <style id="keyword"           _name="Keyword"
                                       map-to="c:keyword"/>
