@@ -20,6 +20,8 @@
 
         <optional>
             <attribute name="mimetypes"/>
+        </optional>
+        <optional>
             <attribute name="globs"/>
         </optional>
 
